# paclens

./: CLAUDE.md  Cargo.toml  HANDOFF-v0.0.4.md  config.default.toml  dev-notes.md  overlap_map.toml  roadmap.md  spec.md
.github/workflows/: ci.yml
src/: format.rs  glyphs.rs  logging.rs  main.rs  planner.rs
src/analyzer/: mod.rs
src/cli/: mod.rs  status.rs  style.rs  update.rs
src/config/: mod.rs  schema.rs
src/executor/: log.rs  mod.rs
src/model/: action.rs  mod.rs  package.rs  scan.rs  source.rs  summary.rs  update.rs
src/providers/: flatpak.rs  mod.rs  pacman.rs
src/scanner/: cache.rs  mod.rs
src/tui/: app.rs  draw.rs  input.rs  mod.rs  theme.rs
tests/: cli.rs
tests/fixtures/flatpak/: list_apps.txt  remote_ls_updates.txt
tests/fixtures/pacman/: q_sample.txt  qi_dep_package.txt  qi_edge_cases.txt  qi_firefox.txt  qi_none_fields.txt  qi_small_system.txt  qu_sample.txt
